# AV-SSL-Optimization-JEPA

./: .gitignore  EXPERIMENTS.md  README.md  build_clips_manifest.py  build_manifest.py  clips_manifest.jsonl  distribution.py  eval_windows.jsonl  evaluate.py  hw_5_task_1.ipynb  main.py  nuscenes_clips.py  paper.aux  paper.out  pyproject.toml  renderer.py  requirements.txt  run_experiment.py  scene_manifest.jsonl  score.py  scores.jsonl  setup.py  train.py
.sisyphus/: boulder.json
configs/: benchmark.yaml  benchmark_cluster.yaml  cluster.yaml  default.yaml  default.yaml.bak  factorial.yaml  file_baseline.yaml
data/: convergence_curve_samples16_seed1.tsv
jepa/: main.ipynb  prediction.ipynb
notebooks/: train_jepa.ipynb
outputs/: exp_a_scores.jsonl  exp_a_summary.json  exp_b_scores.jsonl  exp_b_summary.json  exp_c_scores.jsonl  exp_c_summary.json  full_scores.jsonl  mini_manifest.jsonl  scores.jsonl  scores.summary.json
paper/: paper.aux  paper.out  paper.tex
scripts/: analyze_factorial.py  analyze_main_experiments.py  build_labeling_pool.py  build_manifest.py  build_manifest_from_frames.py  create_quick_checkpoint.py  domain_confound_test.py  domain_confound_test2.py  eval.py  extract_waymo.py  inference.py  merge_benchmark.py  migrate_manifest.py  paper_run.py  probe_supervised.py  resplit_manifest.py  review_labels.py  run_factorial.py  run_main_experiments.py  run_supervised_experiment.py  score_baselines.py  score_curve.py
tests/: test_baselines.py  test_build_manifest.py  test_build_manifest_from_frames.py  test_data.py  test_evaluate_stage.py  (+11 more)
(+70 files in other folders)
